--- a/twistranet/twistapp/locale/fr/LC_MESSAGES/django.po
+++ b/twistranet/twistapp/locale/fr/LC_MESSAGES/django.po
@@ -1351,8 +1351,8 @@ msgstr "Rejoindre"
 
 #: views/community_views.py:482
 #, python-format
-msgid "You're now part of %(name)s!<br />Welcome aboard."
-msgstr "Bienvenue dans la communauté %(name)s&nbsp;!"
+msgid "You're now part of %(name)s!\nWelcome aboard."
+msgstr "Bienvenue dans la communauté %(name)s !"
 
 #: views/community_views.py:489
 msgid "Leave community"
