--- a/twistranet/core/locale/fr/LC_MESSAGES/django.po
+++ b/twistranet/core/locale/fr/LC_MESSAGES/django.po
@@ -1,27 +1,27 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
-#, fuzzy
+# French Translation for TwistraNet
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: twistranet\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-02-05 10:26+0100\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"POT-Creation-Date: 2011-05-06 14:33+0200\n"
+"PO-Revision-Date: 2011-05-06 14:33+0200\n"
+"Last-Translator: Jean-mat Grimaldi <jmgrimaldi@numericube.com>\n"
+"Language-Team: Numericube <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=n>1;\n"
+"Language: \n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"Language-Code: fr\n"
+"Language-Name: French\n"
+"Preferred-Encodings: utf-8 latin1\n"
+"Domain: django\n"
+"X-Is-Fallback-For: fr-be fr-ca fr-lu fr-mc fr-ch fr-fr\n"
 
-#: views.py:220
+#: .\views.py:273
 msgid "Home"
 msgstr "Accueil"
 
-#: views.py:367
+#: .\views.py:437
 msgid "Please correct the indicated errors."
 msgstr "Veuillez corriger les erreurs indiquées."
