Updated wiki syntax : two brackets are needed now

--- a/twistranet/twistapp/locale/fr/LC_MESSAGES/django.po
+++ b/twistranet/twistapp/locale/fr/LC_MESSAGES/django.po
@@ -976,7 +976,7 @@ msgid ""
 "                        </p>\n"
 "                        <p>\n"
 "                        Want to learn about what you can do in twistranet? "
-"Just take a look here: [help]\n"
+"Just take a look here: [[help]]\n"
 "                        </p>\n"
 "                    "
 msgstr ""
@@ -988,7 +988,7 @@ msgstr ""
 "sur quoi vous travaillez dans le formulaire ci-dessous et cliquez sur  "
 "'Envoyer'.                       </p>   <p>    Envie d'en savoir plus sur "
 "<strong>twistranet</strong>&nbsp;? Consultez    l'aide en ligne ici : "
-"[help].                       </p>\n"
+"[[help]].                       </p>\n"
 "                    "
 
 #: .\views\account_views.py:99
