content type form translations

--- a/twistranet/twistapp/locale/fr/LC_MESSAGES/django.po
+++ b/twistranet/twistapp/locale/fr/LC_MESSAGES/django.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: twistranet\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-08-14 04:58+0000\n"
+"POT-Creation-Date: 2011-08-20 04:31+0000\n"
 "PO-Revision-Date: 2011-05-06 13:52+0200\n"
 "Last-Translator: Jean-mat Grimaldi <jmgrimaldi@numericube.com>\n"
 "Language-Team: Numericube\n"
@@ -260,7 +260,9 @@ msgstr "Compte visible pour les personnes autentifiées dans twistranet."
 msgid ""
 "Restricted access to the account network only. This account can be searched, "
 "though."
-msgstr "Accès restreint au compte du réseau seulelement. Ce compte peut tout de même être recherché."
+msgstr ""
+"Accès restreint au compte du réseau seulelement. Ce compte peut tout de même "
+"être recherché."
 
 #: lib/permissions.py:200
 msgid "Workgroup"
@@ -269,7 +271,8 @@ msgstr "Groupe de travail"
 #: lib/permissions.py:201
 msgid ""
 "Content is private to the community, membership must be approved by a member."
-msgstr "Contenu privé à la communauté, l'adhésion doit être approuvée par un membre."
+msgstr ""
+"Contenu privé à la communauté, l'adhésion doit être approuvée par un membre."
 
 #: lib/permissions.py:214
 msgid "Blog"
@@ -279,7 +282,9 @@ msgstr ""
 msgid ""
 "Content is public and discussable, membership is handled by the community "
 "manager."
-msgstr "Contenu public avec discussion ouverte, l'adhésion est gérée par le responsable de la communauté."
+msgstr ""
+"Contenu public avec discussion ouverte, l'adhésion est gérée par le "
+"responsable de la communauté."
 
 #: lib/permissions.py:228
 msgid "Open community"
@@ -297,9 +302,10 @@ msgid ""
 "                            "
 msgstr ""
 "\n"
-"                            Communauté privée visible seulements par ses membres "
-"elle fonctionne cependant comme un groupe de travail.\n"
+"                            Communauté privée visible seulements par ses "
+"membres elle fonctionne cependant comme un groupe de travail.\n"
 "                            "
+
 #: lib/permissions.py:298
 msgid "Intranet: Access restricted to logged-in users only."
 msgstr "Intranet : accès restreint aux personnes autentifiées."
@@ -315,11 +321,12 @@ msgid ""
 "                            "
 msgstr ""
 "\n"
-"                            Utiliser cette option pour avoir un site twistranet ouvert"
-"seulement aux personnes autentifiées.\n"
-"                            Tout le monde est listé, quelques comptes peuvent être "
-"privés.\n"
-"                            C'est habituellement comment un intranet fonctionne.\n"
+"                            Utiliser cette option pour avoir un site "
+"twistranet ouvertseulement aux personnes autentifiées.\n"
+"                            Tout le monde est listé, quelques comptes "
+"peuvent être privés.\n"
+"                            C'est habituellement comment un intranet "
+"fonctionne.\n"
 "                            "
 
 #: lib/permissions.py:331
@@ -343,16 +350,17 @@ msgid ""
 "                            "
 msgstr ""
 "\n"
-"                            Vous voulez une communauté ouverte au monde entier? "
-"Ceci est fait pour vous.\n"
-"                            Si vous avez une association, une communauté de projet (possiblement open-source ;))\n"
-"                            ou simplement vous voulez que votre entreprise soit visible, garder "
-"le contenu ouvert.\n"
-"                            Bien sûr, les personnes anonymes ne seront pas capable de faire quoi que ce soit, excepté "
-"lire les contenus autorisés.\n"
+"                            Vous voulez une communauté ouverte au monde "
+"entier? Ceci est fait pour vous.\n"
+"                            Si vous avez une association, une communauté de "
+"projet (possiblement open-source ;))\n"
+"                            ou simplement vous voulez que votre entreprise "
+"soit visible, garder le contenu ouvert.\n"
+"                            Bien sûr, les personnes anonymes ne seront pas "
+"capable de faire quoi que ce soit, excepté lire les contenus autorisés.\n"
 "                            \n"
-"                            Les contenus d'une communauté globale seront toujours "
-"restreints aux personnes autentifiées.\n"
+"                            Les contenus d'une communauté globale seront "
+"toujours restreints aux personnes autentifiées.\n"
 "                            "
 
 #: models/twistable.py:231
@@ -1576,6 +1584,14 @@ msgstr "Taille moyenne"
 msgid "Full size"
 msgstr "Grande taille"
 
+
+# form names
+msgid "StatusUpdate"
+msgstr "Mini-message"
+
+msgid "File"
+msgstr "Fichier"
+
 #~ msgid ""
 #~ "\n"
 #~ "    %(owner)s published a new %(content_type)s:\n"
@@ -1645,5 +1661,3 @@ msgstr "Grande taille"
 #~ msgid "No contents are available."
 #~ msgstr "Pas de contenu."
 
-#~ msgid "File"
-#~ msgstr "Fichier"
